--- a/contact-us.html
+++ b/contact-us.html
@@ -8,18 +8,29 @@
   </head>
   <body>
   <header>
-    <nav>
-  <div class="dropdown">
-    <button onclick="myFunction()" class="dropdbtn">Dropdown</button>
+  <h1 class="pageheading">BANNER HERE!</h1>
+  <nav class="intPLinks">
+  <ul>
+    <li><button class="pageNav1"><a href="index.html">Home</a></button></li>
+    <li><button class="pageNav2"><a href="about-us.html">About Us</a></button></li>
+    <li><div class="dropdown">
+    <button class="dropdbtn"><a href="#">Our Reckz</a></button>
     <div class="dropdown-links">
-      <a href="index.html">Home</a>
-      <a href="about-us.html">About Us</a>
-      <a href="contact-us.html">Contact Us</a>
-    </div>
-  </div>
-    </nav>
-      <h1 class="pageheading">BANNER HERE!</h1>
+      <p>Genres</p>
+      <a href="#">Martial Arts</a>
+      <a href="#">Battle/Action</a>
+      <a href="#">Comedy</a>
+      <a href="#">Sports</a>
+      <a href="#">Sci-Fi/Fantasy</a>
+      <a href="#">Horror/Supernatural</a>
+      <a href="#">Drama</a>
+      <a href="#">Food</a>
+    </div></li>
+    <li><button class="pageNav3"><a href="contact-us.html">Contact Us</a></button></li>
+  </ul>
+  </nav>
   </header>
+
   <div></div>
    <main>
     <h1 class="pageheading">This is Contact Us!</h1>
@@ -74,6 +85,6 @@
     <link
     href="https://fonts.googleapis.com/css?family=Open+Sans"
     rel="stylesheet" />
-    <!--<script src="scripts/main.js"></script>-->
+    <script src="scripts/main-cu.js"></script>
   </body>
 </html>    
