Applied alt tag to relevant parties for accessibility. Applied external links to social media pages.

--- a/about-us.html
+++ b/about-us.html
@@ -10,13 +10,13 @@
   <header>
   <h1 class="pageheading">BANNER HERE!</h1>
   <nav class="intPLinks">
-<ul>
-    <li><button class="pageNav1"><a href="index.html">Home</a></button></li>
-    <li><button class="pageNav2"><a href="about-us.html">About Us</a></button></li>
+  <ul>
+    <li><a class="pageNav1" href="index.html" alt="Link button to homepage">Home</a></li>
+    <li><a class="pageNav2" href="about-us.html" alt="Link button to about us page">About Us</a></li>
     <li><div class="dropdown">
-    <button class="dropdbtn"><a href="#">Our Reckz</a></button>
+    <a class="dropdbtn" href="#" alt="Dropdown button for genre choice and link to genre page">Our Reckz</a>
     <div class="dropdown-links">
-      <p>Genres</p>
+      <strong>Genres</strong>
       <a href="#">Martial Arts</a>
       <a href="#">Battle/Action</a>
       <a href="#">Comedy</a>
@@ -26,7 +26,7 @@
       <a href="#">Drama</a>
       <a href="#">Food</a>
     </div></li>
-    <li><button class="pageNav3"><a href="contact-us.html">Contact Us</a></button></li>
+    <li><a class="pageNav3" href="contact-us.html" alt="Link button to contact us page">Contact Us</a></li>
   </ul>
   </nav>
   </header>
@@ -43,6 +43,16 @@
 
   </main>
     <footer>
+    <nav class="extPLinks">
+    <ul>
+    <li>
+    <a class="fbLink" href="#"><img class="fbLogo" src="images/fblogo.webp" alt="Facebook page link"></a>
+    <a class="igLink" href="#"><img class="igLogo" src="images/iglogo" alt="Instagram page link"></a>
+    <a class="liLink" href="#"><img class="tiktokLogo" src="images/tiktok.webp" alt="TikTok page link"></a>
+    <a class="xLink" href="#"><img class="xLogo" src="images/xlogo.png" alt="X page link"></a>
+    </li>
+    </ul>
+    </nav>
     <p class="copyright">©2024 by Peak Reckz Ltd</p>
     </footer>
     <link href="styles\austyle.css" rel="stylesheet" />
