Applied some draft content to homepage. Applied flex properties to respond with windows size.

--- a/index.html
+++ b/index.html
@@ -33,13 +33,22 @@
 
   <div></div>
    <main>
-    <h1 class="pageheading">Welcome!</h1>
-    <p>TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! </p>
-    <p>TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! </p>
-    <p>TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! </p>
-    <p>TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! </p>
-    <p>TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! </p>
-    <p>TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! </p>
+    <h1 class="pageheading">Welcome to the beginning!</h1>
+    <div></div>
+    <wbr>
+    <section>
+    <article class="a1">
+    <h3 class="mangaHeading">Manga</h3>
+    <hr>
+    <p class="mangaText">Manga are Japanese comic books and graphic novels that offer a unique blend of storytelling and art. With roots tracing back to the late 19th century, manga has evolved into a vast and diverse medium. Whether you’re into action, romance, fantasy, or slice-of-life stories, there’s a manga out there for you. Manga is typically serialized in magazines before being compiled into volumes called tankōbon. It’s categorized into different demographics like shonen (for young boys), shojo (for young girls), seinen (for adult men), and josei (for adult women), ensuring there’s something for everyone.</p>
+    </article>
+    <!-- "<br>" breaks up the article-->
+    <article class="a2">
+    <h3 class="animeHeading">Anime</h3>
+    <hr>
+    <p class="animeText">Anime is the term for Japanese animated TV shows, movies, and web series. Known for its vibrant art, compelling characters, and imaginative plots, anime offers something for all tastes. Like manga, anime covers a wide range of genres, from epic adventures and heartwarming romances to intense thrillers and thought-provoking science fiction. Some anime are adaptations of manga, while others are based on light novels, video games, or original ideas. The world of anime started gaining popularity in the 1960s with series like "Astro Boy" and has since grown into a global phenomenon.</p>
+    </article>
+    </section>
 
   </main>
     <footer>
