Altered genre. Removed article in favour of reliable link elements for genres. Completed majority of genres page elements.

--- a/about-us.html
+++ b/about-us.html
@@ -14,17 +14,17 @@
     <li><a class="pageNav1" href="index.html" alt="Link button to homepage">Home</a></li>
     <li><a class="pageNav2" href="about-us.html" alt="Link button to about us page">About Us</a></li>
     <li><div class="dropdown">
-    <a class="dropdbtn" href="#" alt="Dropdown button for genre choice and link to genre page">Our Reckz</a>
+    <a class="dropdbtn" href="oreckz.html" alt="Dropdown button for genre choice and link to genre page">Our Reckz</a>
     <div class="dropdown-links">
       <strong>Genres</strong>
-      <a href="#">Martial Arts</a>
+      <a href="#">Fighting/Martial Arts</a>
       <a href="#">Battle/Action</a>
       <a href="#">Comedy</a>
       <a href="#">Sports</a>
       <a href="#">Sci-Fi/Fantasy</a>
       <a href="#">Horror/Supernatural</a>
       <a href="#">Drama</a>
-      <a href="#">Food</a>
+      <a href="#">Music</a>
     </div></li>
     <li><a class="pageNav3" href="contact-us.html" alt="Link button to contact us page">Contact Us</a></li>
   </ul>
