--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
     <li><a class="pageNav1" href="index.html" alt="Link button to homepage">Home</a></li>
     <li><a class="pageNav2" href="about-us.html" alt="Link button to about us page">About Us</a></li>
     <li><div class="dropdown">
-    <a class="dropdbtn" href="#" alt="Dropdown button for genre choice and link to genre page">Our Reckz</a>
+    <a class="dropdbtn" href="oreckz.html" alt="Dropdown button for genre choice and link to genre page">Our Reckz</a>
     <div class="dropdown-links">
       <strong>Genres</strong>
-      <a href="#">Martial Arts</a>
+      <a href="#">Fighting/Martial Arts</a>
       <a href="#">Battle/Action</a>
       <a href="#">Comedy</a>
       <a href="#">Sports</a>
       <a href="#">Sci-Fi/Fantasy</a>
       <a href="#">Horror/Supernatural</a>
       <a href="#">Drama</a>
-      <a href="#">Food</a>
+      <a href="#">Music</a>
     </div></li>
     <li><a class="pageNav3" href="contact-us.html" alt="Link button to contact us page">Contact Us</a></li>
   </ul>
@@ -42,7 +42,7 @@
     <hr>
     <p class="mangaText">Manga are Japanese comic books and graphic novels that offer a unique blend of storytelling and art. With roots tracing back to the late 19th century, manga has evolved into a vast and diverse medium. Whether you’re into action, romance, fantasy, or slice-of-life stories, there’s a manga out there for you. Manga is typically serialized in magazines before being compiled into volumes called tankōbon. It’s categorized into different demographics like shonen (for young boys), shojo (for young girls), seinen (for adult men), and josei (for adult women), ensuring there’s something for everyone.</p>
     </article>
-    <!-- "<br>" breaks up the article-->
+    <!-- "<br>" breaks up the article. Not needed as I'm using the css margin function.-->
     <article class="a2">
     <h3 class="animeHeading">Anime</h3>
     <hr>
