--- a/oreckz.html
+++ b/oreckz.html
@@ -17,14 +17,14 @@
     <a class="dropdbtn" href="oreckz.html" alt="Dropdown button for genre choice and link to genre page">Our Reckz</a>
     <div class="dropdown-links">
       <strong>Genres</strong>
-      <a href="#">Fighting/Martial Arts</a>
-      <a href="#">Battle/Action</a>
-      <a href="#">Comedy</a>
-      <a href="#">Sports</a>
-      <a href="#">Sci-Fi/Fantasy</a>
-      <a href="#">Horror/Supernatural</a>
-      <a href="#">Drama</a>
-      <a href="#">Music</a>
+      <a href="f-ma.html">Fighting/Martial Arts</a>
+      <a href="b-a.html">Battle/Action</a>
+      <a href="comedy.html">Comedy</a>
+      <a href="sports.html">Sports</a>
+      <a href="sci-fi.html">Sci-Fi/Fantasy</a>
+      <a href="h-s.html">Horror/Supernatural</a>
+      <a href="drama.html">Drama</a>
+      <a href="music.html">Music</a>
     </div></li>
     <li><a class="pageNav3" href="contact-us.html" alt="Link button to contact us page">Contact Us</a></li>
   </ul>
@@ -32,35 +32,35 @@
   </header>
 
   <div></div>
-   <main>
+  <main>
     <h1 class="pageheading">Reckz!</h1>
     <div></div>
     <wbr>
     <section>
-    <a class="a1" href="https://mangaplus.shueisha.co.jp/updates">
-    <h3 class="mangaHeading">Fighting/Martial Arts</h3>
+    <a class="a1" href="f-ma.html">
+    <h3 class="seriesHeading">Fighting/Martial Arts</h3>
     </a>
     <!-- "<br>" breaks up the article. Not needed as I'm using the css margin function.-->
-    <a class="a2" href="#">
-    <h3 class="animeHeading">Battle/Action</h3>
+    <a class="a2" href="b-a.html">
+    <h3 class="seriesHeading">Battle/Action</h3>
     </a>
-    <a class="a3" href="#">
-    <h3 class="animeHeading">Comedy</h3>
+    <a class="a3" href="comedy.html">
+    <h3 class="seriesHeading">Comedy</h3>
     </a>
-    <a class="a4" href="#">
-    <h3 class="animeHeading">Sports</h3>
+    <a class="a4" href="sports.html">
+    <h3 class="seriesHeading">Sports</h3>
     </a>
-    <a class="a5" href="#">
-    <h3 class="animeHeading">Sci-Fi/Fantasy</h3>
+    <a class="a5" href="sci-fi.html">
+    <h3 class="seriesHeading">Sci-Fi/Fantasy</h3>
     </a>
-    <a class="a6" href="#">
-    <h3 class="animeHeading">Horror/Supernatural</h3>
+    <a class="a6" href="h-s.html">
+    <h3 class="seriesHeading">Horror/Supernatural</h3>
     </a>
-    <a class="a7" href="#">
-    <h3 class="animeHeading">Drama</h3>
+    <a class="a7" href="drama.html">
+    <h3 class="seriesHeading">Drama</h3>
     </a>
-    <a class="a8" href="#">
-    <h3 class="animeHeading">Music</h3>
+    <a class="a8" href="music.html">
+    <h3 class="seriesHeading">Music</h3>
     </a>
     </section>
 
