--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <a class="dropdbtn" href="oreckz.html" alt="Dropdown button for genre choice and link to genre page">Our Reckz</a>
     <div class="dropdown-links">
       <strong>Genres</strong>
-      <a href="#">Fighting/Martial Arts</a>
-      <a href="#">Battle/Action</a>
-      <a href="#">Comedy</a>
-      <a href="#">Sports</a>
-      <a href="#">Sci-Fi/Fantasy</a>
-      <a href="#">Horror/Supernatural</a>
-      <a href="#">Drama</a>
-      <a href="#">Music</a>
+      <a href="f-ma.html">Fighting/Martial Arts</a>
+      <a href="b-a.html">Battle/Action</a>
+      <a href="comedy.html">Comedy</a>
+      <a href="sports.html">Sports</a>
+      <a href="sci-fi.html">Sci-Fi/Fantasy</a>
+      <a href="h-s.html">Horror/Supernatural</a>
+      <a href="drama.html">Drama</a>
+      <a href="music.html">Music</a>
     </div></li>
     <li><a class="pageNav3" href="contact-us.html" alt="Link button to contact us page">Contact Us</a></li>
   </ul>
