--- a/sci-fi.html
+++ b/sci-fi.html
@@ -17,14 +17,14 @@
     <a class="dropdbtn" href="oreckz.html" alt="Dropdown button for genre choice and link to genre page">Our Reckz</a>
     <div class="dropdown-links">
       <strong>Genres</strong>
-      <a href="#">Martial Arts</a>
-      <a href="#">Battle/Action</a>
-      <a href="#">Comedy</a>
-      <a href="#">Sports</a>
-      <a href="#">Sci-Fi/Fantasy</a>
-      <a href="#">Horror/Supernatural</a>
-      <a href="#">Drama</a>
-      <a href="#">Music</a>
+      <a href="f-ma.html">Fighting/Martial Arts</a>
+      <a href="b-a.html">Battle/Action</a>
+      <a href="comedy.html">Comedy</a>
+      <a href="sports.html">Sports</a>
+      <a href="sci-fi.html">Sci-Fi/Fantasy</a>
+      <a href="h-s.html">Horror/Supernatural</a>
+      <a href="drama.html">Drama</a>
+      <a href="music.html">Music</a>
     </div></li>
     <li><a class="pageNav3" href="contact-us.html" alt="Link button to contact us page">Contact Us</a></li>
   </ul>
@@ -32,53 +32,15 @@
   </header>
 
   <div></div>
-   <main>
+  <main>
     <h1 class="pageheading">Sci-Fi/Fantasy!</h1>
     <div></div>
-    <wbr>
     <section>
-    <a class="a1" href="https://mangaplus.shueisha.co.jp/updates">
-    <h3 class="mangaHeading">Fighting/Martial Arts</h3>
-    <p class="mangaText">TEXT HERE</p>
-    </a>
-    <!-- "<br>" breaks up the article. Not needed as I'm using the css margin function.-->
-    <a class="a2" href="#">
-    <h3 class="animeHeading">Battle/Action</h3>
-    <hr>
-    <p class="animeText">TEXT HERE</p>
-    </a>
-    <a class="a3" href="#">
-    <h3 class="animeHeading">Comedy</h3>
-    <hr>
-    <p class="animeText">TEXT HERE</p>
-    </a>
-    <a class="a4" href="#">
-    <h3 class="animeHeading">Sports</h3>
-    <hr>
-    <p class="animeText">TEXT HERE</p>
-    </a>
-    <a class="a5" href="#">
-    <h3 class="animeHeading">Sci-Fi/Fantasy</h3>
-    <hr>
-    <p class="animeText">TEXT HERE</p>
-    </a>
-    <a class="a6" href="#">
-    <h3 class="animeHeading">Horror/Supernatural</h3>
-    <hr>
-    <p class="animeText">TEXT HERE</p>
-    </a>
-    <a class="a7" href="#">
-    <h3 class="animeHeading">Drama</h3>
-    <hr>
-    <p class="animeText">TEXT HERE</p>
-    </a>
-    <a class="a8" href="#">
-    <h3 class="animeHeading">Food</h3>
-    <hr>
-    <p class="animeText">TEXT HERE</p>
-    </a>
+    <img class="sao" src="images/sao.jpg" alt="Cover of the Sword Art Online series.">
+    <img class="cbpe" src="images/cyberpunke.jpg" alt="Cover of the Cyberpunk: Edgerunners series.">
+    <img class="ez" src="images/edz.jpg" alt="Cover of the Edens Zero series.">
+    <img class="gtm" src="images/gintama.jpg" alt="Cover of the Gintama series.">
     </section>
-
   </main>
     <footer>
     <nav class="extPLinks">
@@ -93,7 +55,7 @@
     </nav>
     <p class="copyright">©2024 by Peak Reckz Ltd</p>
     </footer>
-    <link href="styles\oreckz.css" rel="stylesheet" />
+    <link href="styles\sci-fi.css" rel="stylesheet" />
     <link
     href="https://fonts.googleapis.com/css?family=Open+Sans"
     rel="stylesheet" />
