Recommendation images corrected. Attempted to put text under image without it breaking original placements, will try again late. Changed banner spacing Corrected inconsistent banner alignments

--- a/drama.html
+++ b/drama.html
@@ -36,7 +36,7 @@
     <h1 class="pageheading">Drama!</h1>
     <div></div>
     <section>
-    <img class="ascl" src="images/asassinationcr.jpg" alt="Cover of the Assasination Classroom series.">
+    <img class="ascl" src="images/assassinationcr.jpg" alt="Cover of the Assasination Classroom series.">
     <img class="crote" src="images/classroom-ote.jpg" alt="Cover of the Classroom of The Elite series.">
     <img class="vls" src="images/vinland-sg.jpg" alt="Cover of the Vinland Saga series.">
     <img class="tyr" src="images/tokyorvg.jpg" alt="Cover of the Tokyo Revengers series.">
