Solved Image size issues. Manually resized. Solved Figcaption/text under image issues. Colours used still not finalized. Working on implementing text on clicking art/img.

--- a/b-a.html
+++ b/b-a.html
@@ -36,10 +36,22 @@
     <h1 class="pageheading">Battle/Action!</h1>
     <div></div>
     <section>
-    <img class="naruto" src="images/naruto.jpg" alt="Cover of the Naruto series.">
-    <img class="sds" src="images/sds.jpg" alt="Cover of the 7 Deadly Sins series.">
-    <img class="mha" src="images/mha.jpg" alt="Cover of the My Hero Academia series.">
+    <article class="a1">
+    <img class="naruto" src="images/naruto.jpg" alt="Cover of the Naruto series">
+    <figcaption>Naruto</figcaption>
+    </article>
+    <article class="a2">
+    <img class="sds" src="images/sds.jpg" alt="Cover of the Seven Deadly Sins series">
+    <figcaption>Seven Deadly Sins</figcaption>
+    </article>
+    <article class="a3">
+    <img class="mha" src="images/mha.jpg" alt="Cover of the My Hero Academia series">
+    <figcaption>My Hero Academia</figcaption>
+    </article>
+    <article class="a4">
     <img class="blkc" src="images/black-clover.jpg" alt="Cover of the Black Clover series">
+    <figcaption>Black Clover</figcaption>
+    </article>
     </section>
   </main>
     <footer>
