--- a/comedy.html
+++ b/comedy.html
@@ -36,10 +36,22 @@
     <h1 class="pageheading">Comedy!</h1>
     <div></div>
     <section>
-    <img class="op" src="images/one-piece.png" alt="Cover of the One Piece series.">
-    <img class="opm" src="images/opm.jpg" alt="Cover of the One Punch Man series.">
+    <article class="a1">
+    <img class="op" src="images/one-piece.png" alt="Cover of the One Piece series">
+    <figcaption>Naruto</figcaption>
+    </article>
+    <article class="a2">
+    <img class="opm" src="images/opm.jpg" alt="Cover of the One Punch Man">
+    <figcaption>One Punch Man</figcaption>
+    </article>
+    <article class="a3">
     <img class="knsb" src="images/konosuba.jpg" alt="Cover of the Konosuba: God's Blessing on this Wonderful World series.">
-    <img class="ktkhr" src="images/katekyohr.jpg" alt="Cover of the Katekyo Hitman: Reborn! series">
+    <figcaption>Konosuba: God's Blessing on this Wonderful World</figcaption>
+    </article>
+    <article class="a4">
+    <img class="kthr" src="images/katekyohr.jpg" alt="Cover of the Katekyo Hitman: Reborn! series">
+    <figcaption>Katekyo Hitman Reborn!</figcaption>
+    </article>
     </section>
   </main>
     <footer>
