--- a/drama.html
+++ b/drama.html
@@ -36,10 +36,22 @@
     <h1 class="pageheading">Drama!</h1>
     <div></div>
     <section>
+    <article class="a1">
     <img class="ascl" src="images/assassinationcr.jpg" alt="Cover of the Assasination Classroom series.">
+    <figcaption>Assassination Classroom</figcaption>
+    </article>
+    <article class="a2">
     <img class="crote" src="images/classroom-ote.jpg" alt="Cover of the Classroom of The Elite series.">
+    <figcaption>Classroom of The Elite</figcaption>
+    </article>
+    <article class="a3">
     <img class="vls" src="images/vinland-sg.jpg" alt="Cover of the Vinland Saga series.">
+    <figcaption>Vinland Saga</figcaption>
+    </article>
+    <article class="a4">
     <img class="tyr" src="images/tokyorvg.jpg" alt="Cover of the Tokyo Revengers series.">
+    <figcaption>Tokyo Revengers</figcaption>
+    </article>
     </section>
   </main>
     <footer>
