--- a/f-ma.html
+++ b/f-ma.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <title>Reckz | PR</title>
+    <title>Fighting/MA | PR</title>
     <!--<link rel="icon" href="images/shlg.webp"> <!--adds icon in page title-->
   </head>
   <body>
@@ -32,14 +32,27 @@
   </header>
 
   <div></div>
-  <main>
+   <main>
     <h1 class="pageheading">Fighting/Martial Arts!</h1>
     <div></div>
+    <wbr>
     <section>
-    <img class="dbz" src="images/dragonballz.jpg" alt="Cover of the Dragon Ball Z series.">
-    <img class="ktmd" src="images/kenichitmd.jpg" alt="Cover of the Kenichi The Mightiest Disciple series.">
-    <img class="kenganashura" src="images/kengana.jpg" alt="Cover of the Kengan Ashura series.">
-    <img class="bakitgrap" src="images/bakitg.jpg" alt="Cover of the Baki The Grappler series">
+    <article class="a1">
+    <img class="dbz" src="images/dragonballz.jpg" alt="Cover of the Dragon Ball Z series">
+    <figcaption>Dragon Ball Z</figcaption>
+    </article>
+    <article class="a2">
+    <img class="ktmd" src="images/ktmd.jpg" alt="Cover of the Kenichi The Mightiest Disciple series">
+    <figcaption>Kenichi The Mightiest Disciple</figcaption>
+    </article>
+    <article class="a3">
+    <img class="ka" src="images/kengana.jpg" alt="Cover of the Kengan Ashura series">
+    <figcaption>Kengan Ashura</figcaption>
+    </article>
+    <article class="a4">
+    <img class="bakitg" src="images/bakitg.jpg" alt="Cover of the Baki The Grappler series">
+    <figcaption>Baki The Grappler</figcaption>
+    </article>
     </section>
   </main>
     <footer>
