--- a/h-s.html
+++ b/h-s.html
@@ -36,10 +36,22 @@
     <h1 class="pageheading">Horror/Supernatural!</h1>
     <div></div>
     <section>
+    <article class="a1">
     <img class="csm" src="images/csm.jpg" alt="Cover of the Chainsaw Man series.">
+    <figcaption>Chainsaw Man</figcaption>
+    </article>
+    <article class="a2">
     <img class="tyg" src="images/tyg.jpg" alt="Cover of the Tokyo Ghoul series.">
+    <figcaption>Tokyo Ghoul</figcaption>
+    </article>
+    <article class="a3">
     <img class="berserk" src="images/berserk.jpg" alt="Cover of the Berserk series.">
+    <figcaption>Berserk</figcaption>
+    </article>
+    <article class="a4">
     <img class="tpn" src="images/tpnl.jpg" alt="Cover of The Promised Neverland series.">
+    <figcaption>The Promised Neverland</figcaption>
+    </article>
     </section>
   </main>
     <footer>
