--- a/music.html
+++ b/music.html
@@ -36,10 +36,21 @@
     <h1 class="pageheading">Music!</h1>
     <div></div>
     <section>
+    <article class="a1">
     <img class="ylia" src="images/ylia.jpg" alt="Cover of the Your Lie in April series.">
+    <figcaption>Your Lie in April</figcaption>
+    </article>
+    <article class="a2">
     <img class="beck" src="images/beck-mcs.jpg" alt="Cover of the Beck: Mongolian Chop Squad series.">
+    <figcaption>Beck: Mongolian Chop Squad</figcaption>
+    </article>
+    <article class="a3">
     <img class="so-euph" src="images/s-euph.jpg" alt="Cover of Sound Euphonium series.">
+    <figcaption>Sound! Euphonium</figcaption>
+    </article>
+    <article class="a4">
     <img class="bctr" src="images/bocchitr.jpg" alt="Cover of the Bocchi The Rock! series.">
+    <figcaption>Bocchi The Rock</figcaption>
     </section>
   </main>
     <footer>
