--- a/sci-fi.html
+++ b/sci-fi.html
@@ -36,10 +36,22 @@
     <h1 class="pageheading">Sci-Fi/Fantasy!</h1>
     <div></div>
     <section>
+    <article class="a1">
     <img class="sao" src="images/sao.jpg" alt="Cover of the Sword Art Online series.">
+    <figcaption>Sword Art Online</figcaption>
+    </article>
+    <article class="a2">
     <img class="cbpe" src="images/cyberpunke.jpg" alt="Cover of the Cyberpunk: Edgerunners series.">
+    <figcaption>Cyberpunk: Edgerunners</figcaption>
+    </article>
+    <article class="a3">
     <img class="ez" src="images/edz.jpg" alt="Cover of the Edens Zero series.">
+    <figcaption>Edens Zero</figcaption>
+    </article>
+    <article class="a4">
     <img class="gtm" src="images/gintama.jpg" alt="Cover of the Gintama series.">
+    <figcaption>Gintama</figcaption>
+    </article>
     </section>
   </main>
     <footer>
