--- a/sports.html
+++ b/sports.html
@@ -36,10 +36,22 @@
     <h1 class="pageheading">Sports!</h1>
     <div></div>
     <section>
+    <article class="a1">
     <img class="hni" src="images/hjmni.jpg" alt="Cover of the Hajime No Ippo series.">
+    <figcaption>Hajime No Ippo</figcaption>
+    </article>
+    <article class="a2">
     <img class="es21" src="images/eyeshield21.jpg" alt="Cover of the Eyeshield 21 series.">
+    <figcaption>Eyeshield 21</figcaption>
+    </article>
+    <article class="a3">
     <img class="bluelck" src="images/bluelck.jpg" alt="Cover of the Blue Lock series.">
+    <figcaption>Bluelock</figcaption>
+    </article>
+    <article class="a4">
     <img class="kb" src="images/kurokobb.jpg" alt="Cover of the Kuroko's Basketball series">
+    <figcaption>Kuroko's Basket</figcaption>
+    </article>
     </section>
   </main>
     <footer>
