Corrected image choices. Added makeshift 18+ content warning for H/S Link

--- a/h-s.html
+++ b/h-s.html
@@ -71,6 +71,6 @@
     <link
     href="https://fonts.googleapis.com/css?family=Open+Sans"
     rel="stylesheet" />
-    <!--<script src="scripts/main.js"></script>-->
+    <script src="scripts/h-s.js"></script>
   </body>
 </html>    
