--- a/oreckz.html
+++ b/oreckz.html
@@ -55,6 +55,7 @@
     </a>
     <a class="a6" href="h-s.html">
     <h3 class="seriesHeading">Horror/Supernatural</h3>
+    <img align="left" class="adwn" src="images/18+.png" alt="18+ Logo warning.">
     </a>
     <a class="a7" href="drama.html">
     <h3 class="seriesHeading">Drama</h3>
@@ -82,6 +83,6 @@
     <link
     href="https://fonts.googleapis.com/css?family=Open+Sans"
     rel="stylesheet" />
-    <!--<script src="scripts/main.js"></script>-->
+    <script src="scripts/or.js"></script>
   </body>
 </html>    
