--- a/about-us.html
+++ b/about-us.html
@@ -55,7 +55,7 @@
     <div class="secbr"></div>
     <strong>The Peak Reckz Team</strong>
     <div class="secbr"></div>
-    <strong>Ready to Dive in?</strong>
+    <p style="text-align: center;"><strong>Ready to Dive in?</strong></p>
     <p style="text-align: center;">Have a look at our <a href="oreckz.html"><strong>personal recomendations</strong></a></p>
     <div class="secbr"></div>
     <button onclick="scrtopFunction()" id="BTTBtn" title="Go to top">Back To Top</button>
